@@ -1,3 +1,10 @@
+Summary of important user-visible changes for statistics 1.2.0:
+-------------------------------------------------------------------
+
+ ** The following functions are new in 1.2.0:
+
+      regress_gp
+
 Summary of important user-visible changes for statistics 1.1.3:
 -------------------------------------------------------------------
 
